--- a/report/survey_templates_inherit.xml
+++ b/report/survey_templates_inherit.xml
@@ -24,11 +24,7 @@
     <!-- Define the custom template for Firenor V1 layout -->
     <template id="certification_report_view_firenor_v1">
         <t t-call="web.basic_layout">
-            <div class="page article certification-wrapper"
-                t-att-data-oe-model="user_input._name"
-                t-att-data-oe-id="user_input.id"
-                style="padding: 40px; text-align: center;">
-
+            <div>
                 <h1 style="font-size: 48px; color: #FF4500;">Firenor Certification</h1>
                 <p>Congratulations <t t-esc="user_input.partner_id.name"/>!</p>
                 <p>You have successfully completed the survey:</p>
