--- a/report/survey_templates_inherit.xml
+++ b/report/survey_templates_inherit.xml
@@ -7,12 +7,21 @@
                 <t t-call="fn_academy.certification_report_view_firenor_v1"/>
             </t>
         </xpath>
+
+        <!-- Modify the logic for layout_template and layout_color -->
+        <xpath expr="//t[@t-set='layout_values']" position="attributes">
+            <attribute name="t-if">user_input.survey_id.certification_report_layout != 'firenor_v1'</attribute>
+        </xpath>
     </template>
 
     <!-- Custom template for Firenor V1 layout -->
     <template id="certification_report_view_firenor_v1">
         <t t-call="web.basic_layout">
-            <div class="page" style="padding: 40px; text-align: center;">
+            <div class="page article certification-wrapper"
+                t-att-data-oe-model="user_input._name"
+                t-att-data-oe-id="user_input.id"
+                style="padding: 40px; text-align: center;">
+
                 <h1 style="font-size: 48px; color: #47a5ae;">Firenor Certification</h1>
                 <p>Congratulations <t t-esc="user_input.partner_id.name"/>!</p>
                 <p>You have successfully completed the survey:</p>
