--- a/report/survey_templates_inherit.xml
+++ b/report/survey_templates_inherit.xml
@@ -6,7 +6,9 @@
 
                 <!-- If the layout is 'firenor_v1', use the custom Firenor template -->
                 <t t-if="user_input.survey_id.certification_report_layout == 'firenor_v1'">
-                    <t t-call="fn_academy.certification_report_view_firenor_v1"/>
+                    <t t-set="layout_template" t-value="modern"/>
+                    <t t-set="layout_color" t-value="#47a5ae"/>
+                    <t t-call="survey.certification_report_view_general"/>
                 </t>
 
                 <!-- If the layout is NOT 'firenor_v1', use the default logic with fallback for layout_values -->
