--- a/static/src/scss/survey_reports_custom.scss
+++ b/static/src/scss/survey_reports_custom.scss
@@ -4,4 +4,76 @@
     &.seagreen {
         background-color: #47a5ae;  // Seagreen color for background
     }
+
+    &.firenor {
+        background-image: url("");
+        background-repeat: no-repeat;
+        background-size: cover;
+
+        &.seagreen .certification .certification-seal {
+            background-image: url("");
+        }
+
+
+        .certification {
+            font-family: "Square721BT", sans-serif;
+            width: 272mm;
+            height: 185mm;
+            margin: 12.5mm;
+            background-color: #47a5ae;
+            text-align: center;
+
+            .certification-seal {
+                top: -7mm;
+                right: 20mm;
+                width: 22mm;
+                height: 42mm;
+                background-image: url("");
+                background-repeat: no-repeat;
+            }
+
+            .certification-top {
+                padding-top: 28mm;
+                padding-bottom: 10mm;
+                color: #47a5ae;
+
+                h1 b {
+                    font-weight: bold;
+                }
+            }
+
+            .certification-bottom {
+                width: 272mm;
+
+                .certification-date-wrapper {
+                    margin-left: 40mm;
+                    text-transform: uppercase;
+
+                    .certification-date {
+                        font-size: 18pt;
+                        color: #47a5ae;
+                    }
+
+                    span {
+                        font-size: 14pt;
+                        color: #47a5ae;
+                    }
+
+                }
+
+                .certification-company {
+                    right: 30mm;
+                }
+            }
+
+            .certification-number {
+                bottom: -6mm;
+                right:0;
+                text-align: right;
+            }
+        }
+    }
+
+
+
 }
