--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -1,13 +1,21 @@
 <odoo>
-  <template id="custom_survey_certificate" inherit_id="survey.survey_certification_report">
-    <xpath expr="//div[@class='o_survey_certificate']" position="replace">
-      <div class="custom-certificate">
-        <h1>Firenor Seagreen Certificate</h1>
-        <p>
-          This certifies that <strong><t t-esc="survey_user_input.partner_id.name"/></strong>
-          has successfully completed the <strong><t t-esc="survey_id.title"/></strong> survey.
-        </p>
-      </div>
+  <template id="certification_report_view" inherit_id="survey.certification_report_view" priority="20">
+    <xpath expr="." position="replace">
+      <t t-call="web.html_container">
+        <t t-foreach="docs" t-as="user_input">
+          <t t-set="layout_values" t-value="['firenor', 'seagreen']"/>
+          <t t-set="layout_template" t-value="layout_values[0]"/>
+          <t t-set="layout_color" t-value="layout_values[1]"/>
+          <div class="custom-certificate">
+            <h1>Firenor Seagreen Certificate</h1>
+            <p>
+              This certifies that <strong><t t-esc="user_input.partner_id.name or user_input.email"/></strong>
+              successfully completed <t t-esc="user_input.survey_id.display_name"/>.
+            </p>
+            <p>Date: <t t-field="user_input.create_date" t-options='{"widget": "date"}'/></p>
+          </div>
+        </t>
+      </t>
     </xpath>
   </template>
 </odoo>
