--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -9,7 +9,7 @@
                     <div id="o_survey_certification" t-att-data-oe-model="user_input._name"
                          t-att-data-oe-id="user_input.id"
                          t-attf-class="#{'article certification-wrapper ' + layout_template + ' ' + layout_color}">
-                        <div class="custom-certificate">
+                        <div class="custom-certificate" style="background-color: #47a5ae !important;">
                             <h1>Firenor Seagreen Certificate</h1>
                             <p>
                                 This certifies that
