--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -8,8 +8,8 @@
                     <t t-set="layout_color" t-value="layout_values[1]"/>
                     <div id="o_survey_certification" t-att-data-oe-model="user_input._name"
                          t-att-data-oe-id="user_input.id"
-                         t-attf-class="#{'article certification-wrapper ' + layout_template + ' ' + layout_color}" style="background-color: none !important; background: url(/fn_academy/static/img/ceagreen_certificate_completion.png);">
-                        <div class="custom-certificate" >
+                         t-attf-class="#{'article certification-wrapper ' + layout_template + ' ' + layout_color}" style="background-color: none !important; ">
+                        <div class="firenor-seagreen" >
                             <h1>Certificate of Completion</h1>
                             <h6>This is presented to:</h6>
                             <h2><t t-esc="user_input.partner_id.name or user_input.email"/></h2>
