--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -8,7 +8,7 @@
                     <t t-set="layout_color" t-value="layout_values[1]"/>
                     <div id="o_survey_certification" t-att-data-oe-model="user_input._name"
                          t-att-data-oe-id="user_input.id"
-                         t-attf-class="#{'article certification-wrapper ' + layout_template + ' ' + layout_color}" style="background-color: none !important; ">
+                         t-attf-class="#{'article certification-wrapper ' + layout_template + ' ' + layout_color}" style="background-color: #ffffff !important; ">
                         <div class="firenor-seagreen" >
                             <h1>Certificate of Completion</h1>
                             <h6>This is presented to:</h6>
