--- a/static/src/scss/survey_reports_custom.scss
+++ b/static/src/scss/survey_reports_custom.scss
@@ -9,12 +9,12 @@
 }
 
 .firenor-seagreen h1 {
-    color:red;
+    color:red !important;
     font-size: 32px;
     margin-bottom: 10px;
 }
 
 .firenor-seagreen p {
-    color:red;
+    color:red !important;
     font-size: 16px;
 }
