--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -8,13 +8,36 @@
                     <t t-set="layout_color" t-value="layout_values[1]"/>
                     <div id="o_survey_certification" t-att-data-oe-model="user_input._name"
                          t-att-data-oe-id="user_input.id"
-                         t-attf-class="#{'article certification-wrapper ' + layout_template + ' ' + layout_color}" style="background-color: #ffffff !important; ">
-                        <div class="firenor-seagreen" >
+                         t-attf-class="#{'article certification-wrapper ' + layout_template + ' ' + layout_color}"
+                         style="background-color: #ffffff !important; ">
+                        <style>
+                            .firenor-seagreen {
+                            background-color: #2E8B57;
+                            color: white;
+                            padding: 20px;
+                            border-radius: 10px;
+                            font-family: "Arial", sans-serif;
+                            font-size: 18px;
+                            background: url(/fn_academy/static/img/ceagreen_certificate_completion.png);
+                            }
+
+                            .firenor-seagreen h1 {
+                            color:red !important;
+                            }
+
+                            .firenor-seagreen p {
+                            color:red !important;
+                            }
+                        </style>
+                        <div class="firenor-seagreen">
                             <h1>Certificate of Completion</h1>
                             <h6>This is presented to:</h6>
-                            <h2><t t-esc="user_input.partner_id.name or user_input.email"/></h2>
+                            <h2>
+                                <t t-esc="user_input.partner_id.name or user_input.email"/>
+                            </h2>
 
-                            <p> successfully completed <t t-esc="user_input.survey_id.display_name"/>.</p>
+                            <p>successfully completed<t t-esc="user_input.survey_id.display_name"/>.
+                            </p>
                         </div>
                     </div>
                 </t>
