--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -12,12 +12,7 @@
                          style="background-color: #ffffff !important; ">
                         <style>
                             .firenor-seagreen {
-                            background-color: #2E8B57;
-                            color: white;
-                            padding: 20px;
-                            border-radius: 10px;
                             font-family: "Arial", sans-serif;
-                            font-size: 18px;
                             background: url(/fn_academy/static/img/ceagreen_certificate_completion.png);
                             }
 
@@ -29,15 +24,19 @@
                             color:red !important;
                             }
                         </style>
-                        <div class="firenor-seagreen">
-                            <h1>Certificate of Completion</h1>
-                            <h6>This is presented to:</h6>
-                            <h2>
-                                <t t-esc="user_input.partner_id.name or user_input.email"/>
-                            </h2>
+                        <div class="container firenor-seagreen">
+                            <div class="row">
+                                <div class="col">
+                                    <h1>Certificate of Completion</h1>
+                                    <h6>This is presented to:</h6>
+                                    <h2>
+                                        <t t-esc="user_input.partner_id.name or user_input.email"/>
+                                    </h2>
 
-                            <p>successfully completed<t t-esc="user_input.survey_id.display_name"/>.
-                            </p>
+                                    <p>successfully completed<t t-esc="user_input.survey_id.display_name"/>.
+                                    </p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </t>
