--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -11,8 +11,10 @@
                         border: 1px solid red;
                         }
                     </style>
-                    <t t-set="layout_values"
-                       t-value="user_input.survey_id.certification_report_layout.split('_') if user_input.survey_id.certification_report_layout else ['firenor', 'seagreen']"/>
+                    <!--<t t-set="layout_values"
+                       t-value="user_input.survey_id.certification_report_layout.split('_') if user_input.survey_id.certification_report_layout else ['firenor', 'seagreen']"/>-->
+
+                    <t t-set="layout_values" t-value="['firenor', 'seagreen']"/>
                     <t t-set="layout_template" t-value="layout_values[0]"/>
                     <t t-set="layout_color" t-value="layout_values[1]"/>
                     <div id="o_survey_certification" t-att-data-oe-model="user_input._name"
@@ -25,8 +27,10 @@
                                     <h2>
                                         <t t-esc="user_input.partner_id.name or user_input.email"/>
                                     </h2>
-                                    <p>successfully completed<t t-esc="user_input.survey_id.display_name"/>.
-                                    </p>
+                                    <p>successfully completed<t t-esc="user_input.survey_id.display_name"/>. </p>
+
+                                    <p>layout_template: <t t-esc="layout_template"/></p>
+                                    <p>layout_template: <t t-esc="layout_color"/></p>
                                 </div>
                             </div>
                         </div>
