--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -14,7 +14,7 @@
                     <!--<t t-set="layout_values"
                        t-value="user_input.survey_id.certification_report_layout.split('_') if user_input.survey_id.certification_report_layout else ['firenor', 'seagreen']"/>-->
                     <t t-set="layout_values"
-                       t-value="user_input.survey_id.certification_report_layout.split('_') if user_input.survey_id.certification_report_layout"/>
+                       t-value="user_input.survey_id.certification_report_layout.split('_') if user_input.survey_id.certification_report_layout else ['not', 'thing']"/>
 
                     <!--<t t-set="layout_values" t-value="['firenor', 'seagreen']"/>-->
                     <t t-set="layout_template" t-value="layout_values[0]"/>
