--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -3,14 +3,7 @@
         <xpath expr="." position="replace">
             <t t-call="web.html_container">
                 <t t-foreach="docs" t-as="user_input">
-                    <style>
-                        .firenor {
-                        background-color: #ffffff !important;
-                        background: url(/fn_academy/static/img/ceagreen_certificate_completion.png);
-                        background-size: cover;
-                        border: 1px solid red;
-                        }
-                    </style>
+
                     <!--<t t-set="layout_values"
                        t-value="user_input.survey_id.certification_report_layout.split('_') if user_input.survey_id.certification_report_layout else ['firenor', 'seagreen']"/>-->
                     <t t-set="layout_values"
@@ -22,6 +15,14 @@
                     <div id="o_survey_certification" t-att-data-oe-model="user_input._name"
                          t-att-data-oe-id="user_input.id"
                          t-attf-class="#{'article certification-wrapper ' + layout_template + ' ' + layout_color}">
+                        <style>
+                            .firenor, .seagreen {
+                            background-color: #ffffff !important;
+                            background: url(/fn_academy/static/img/ceagreen_certificate_completion.png);
+                            background-size: cover;
+                            border: 1px solid red;
+                            }
+                        </style>
                         <div t-attf-class="#{'container ' + layout_template + ' ' + layout_color}">
                             <div class="row">
                                 <div class="col">
@@ -29,10 +30,15 @@
                                     <h2>
                                         <t t-esc="user_input.partner_id.name or user_input.email"/>
                                     </h2>
-                                    <p>successfully completed<t t-esc="user_input.survey_id.display_name"/>. </p>
+                                    <p>successfully completed<t t-esc="user_input.survey_id.display_name"/>.
+                                    </p>
 
-                                    <p>layout_template: <t t-esc="layout_template"/></p>
-                                    <p>layout_color: <t t-esc="layout_color"/></p>
+                                    <p>layout_template:
+                                        <t t-esc="layout_template"/>
+                                    </p>
+                                    <p>layout_color:
+                                        <t t-esc="layout_color"/>
+                                    </p>
                                 </div>
                             </div>
                         </div>
